# HexMaster

./: .env.example  .gitignore  .pre-commit-config.yaml  DatabaseSchemaStockpile.sql  Dockerfile  LICENSE  bot.py  docker-compose.yml  injest_snippet.py  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  snippet_injest.py
.github/workflows/: ci.yml  docker-publish.yml
.run/: health.run.xml  snippet_injest.run.xml  snippet_query.run.xml
data/: Foxhole Logi Tool - TheManacle.tsv  Foxhole Logi Tool - Tine.tsv  Regions.csv  Towns.csv  catalog.csv
data/core/: Priority.csv
data/samples/: Foxhole Logi Tool - priority.csv  ItemsNumbered.csv
docs/: admin.md  commands.md  installation.md  tech_reference.md
sample_data/: 2026-01-31T01_20_15.009Z_foxhole-inventory.tsv  Foxhole Logi Tool - CallumsKeep.tsv  Foxhole Logi Tool - Regions.csv.csv  Priority.csv  Regions.csv  Regions.csv~  towns.tsv
scripts/: analyze_regions.py  cleanup_v2.py  debug_kingstone.py  fir_remote.py  force_seed_regions.py  inject_items.py  inspect_snapshot_items.py  migrate_snapshot_items_id.py  parse_catalog.py  setup.sh  snippet_injest.py  snippet_query.py  sync_regions.py  test_final_dist.py  test_global_dist.py  test_hub_filter.py  verify_db.py
scripts/data/: force_seed_regions.py  parse_catalog.py  sync_regions.py
scripts/db/: add_war_number_migration.sql  apply_migration.py  verify_db.py  verify_schema_fix.py
scripts/tests/: test_final_dist.py  test_guild_isolation.py  test_hub_filter.py  test_ocr_ingestion_fix.py  test_pagination_logic.py  test_query.py  (+5 more)
tests/: conftest.py
(+34 files in other folders)
