[project]
name = "hexmaster"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.2",
  "SQLAlchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "python-dotenv",
  "tabulate",
  "pandas",
  "aiohttp",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]