[project]
name = "hexmaster"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.2",
  "SQLAlchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "python-dotenv",
  "tabulate",
  "pandas",
  "aiohttp",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true